--- a/styles/homework8layout.css
+++ b/styles/homework8layout.css
@@ -168,13 +168,57 @@ body {
 			border-radius: 5px;
 		}
 
-		.dva {
-			width: calc(100% - 30px);
+		.calendar {
+			width: 422px;
 			margin: 30px 15px 30px 0;
 			height: 300px;
-			background: white;
+			background: #f87e47;
 			border-radius: 5px;
 		}
+
+			.calendar header {
+				width: 422px;
+				height: 40px;
+				background-color: white;
+			}
+
+				.calendar header button {
+					background-color: transparent;
+					border: none;
+				}
+
+				.calendar .body {
+					box-sizing: border-box;
+					width: 422px;
+					height: 245px;
+					background-color: #f87e47;
+					border-radius: 0 0 5px 5px;
+					padding: 10px;
+				}
+
+					.calendar .body ul {
+						margin: 0;
+						padding: 0;
+						list-style: none;
+						width: 100%;
+					}
+
+						.calendar .body ul li .header {
+
+						}
+
+						.calendar .body ul li {
+							width: calc(402px / 7);
+							display: block;
+							float: left;
+						}
+
+							.calendar .body ul li.days {
+								font-size: 16px;
+								color: white;
+								text-align: center;
+							}
+
 
 		.tri {
 			width: calc(100% - 30px);
@@ -260,16 +304,147 @@ body {
 	.inputpolinja {
 		margin-top: 30px;
 		width: 100%;
-		height: 300px;
+		height: auto;
 		background: white;
 		display: block;
 		float: left;
 		border-radius: 5px;
 	}
 
-	input {
+		input[type="text"] {
+			width: 250px;
+			height: 30px;
+			padding: 2px 5px;
+			border: 2px solid silver;
+			border-radius: 5px;
+			padding: 0 0 0 15px; 
+			font-family: sans-serif;
+			font-size: 15px;
+		}
 
+			.text1 {
+				margin: 30px 25px 15px 30px !important;
+			}
+
+			.text2 {
+				border: 2px solid grey !important;
+				margin: 0 25px 15px 30px;
+			}
+
+			.text3 {
+				border: 2px solid #f87b46 !important;
+				margin: 0 25px 15px 30px;
+			}
+
+			input[type="checkbox"] {
+				height: 25px;
+				width: 25px;
+				border: 2px solid silver;
+				vertical-align: middle;
+			}
+			
+			input[type="radio"] {
+				height: 25px;
+				width: 25px;
+				border: 2px solid silver;
+				vertical-align: middle;
+			}
+
+		.inputpolinja button {
+			width: 180px;
+			height: 40px;
+			vertical-align: middle;
+			background-color: #f87e47;
+			border-radius: 5px;
+			font-family: sans-serif;
+			color: white;
+			font-size: 15px;
+			margin-left: 15px;
+			border: none;
+		}
+
+		textarea {
+			width: 350px;
+			height: 90px;
+			margin: 10px 20px 20px 30px; 
+			border: 2px solid silver;
+			border-radius: 5px;
+			padding: 10px 0 0 15px;
+			color: grey;
+			font-family: sans-serif;
+			font-size: 15px;
+			float: left;
+
+		}
+	
+	.selectholder {
+		float: left;
+		width: 200px;
+		height: auto;
 	}
+
+		.selection {
+			width: 180px;
+			height: 43px;
+			display: block;
+			float: left;
+			margin: 10px 0 0 0px;
+			border-radius: 5px;
+			background-color: silver;
+			border: none;
+			color: grey;
+			font-family: sans-serif;
+			font-size: 15px;
+			padding: 0 15px;
+		}
+
+		.over {
+			width: 180px;
+			height: 43px;
+			display: block;
+			float: left;
+			margin: 12px 0 0 0px;
+			border-radius: 5px;
+			background-color: grey;
+			border: none;
+			color: silver;
+			font-family: sans-serif;
+			font-size: 15px;
+			padding: 0 15px;
+		}
+
+		input[type="range"] {
+			margin: 0 0 20px 30px;
+			width: 280px;
+			display: block;
+			float: left;
+		}
+
+		.searchbar {
+			display: block;
+			float: left;
+			margin-left: 20px;
+		}
+		
+		input[type="search"] {
+			margin: 0;
+			padding: 0;
+			width: 220px;
+			height: 35px;
+			border-radius: 5px;
+			/*display: block;*/
+			float: left;
+
+		}
+
+		.searchbar > img {
+			margin: 0;
+			padding: 0;
+			width: 35px;
+			height: 35px;
+			float: left;
+			/*display: block;*/
+		}
 
 	.prvi3 {
 
